--- a/Store/Templates/Store/admin/index.html
+++ b/Store/Templates/Store/admin/index.html
@@ -31,10 +31,15 @@
   </tr>
   <tr>
     <td>
-      <a href="admin/genres"> GENRES </a>
+      <a href='{% url 'admingenreindex' %}'> GENRES </a>
     </td>
     <td>
-        <a href="admin/publishers">PUBLISHERS</a>
+        <a href='{% url 'adminpublisherindex' %}'>PUBLISHERS</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      AUTHORS
     </td>
   </tr>
 </table>
