--- a/Store/Templates/Store/customer/addcard.html
+++ b/Store/Templates/Store/customer/addcard.html
@@ -11,9 +11,7 @@
 
 {% block content %}
 <h6>
-<form method="POST" name='go-back'>
-<a href='customeraccount'> Return to Account Overview</a>
-</form>
+<a href='{% url 'customeraccount' %}'><i class=" material-icons medium">keyboard_return</i> Return to Account Overview</a>
 </h6>
 
 <form method="POST" class="col s6 m6" >
