--- a/Store/Templates/Store/admin/books/books.html
+++ b/Store/Templates/Store/admin/books/books.html
@@ -2,8 +2,29 @@
 {% load staticfiles %}
 {% load widget_tweaks %}
 
+{% block head %}
+<link href="{% static "css/bookstyle.css" %}" type="text/css" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
 <h4>Books</h4>
+<div class="section">
+    <div class="row">
+        <div class="col s4 offset-s4">
+            <nav>
+                <div class="nav-wrapper">
+                    <form>
+                    <div class="input-field">
+                        <input id="search" type="search" required>
+                        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                        <i class="material-icons">close</i>
+                    </div>
+                    </form>
+                </div>
+            </nav>
+        </div>
+    </div>
+</div>
 <table>
     <thead>
         <tr>
