--- a/Store/static/css/mainstyle.css
+++ b/Store/static/css/mainstyle.css
@@ -7,5 +7,15 @@ html, body, .container {
 }
 
 .banner {
-    height: 50%;
+    height: 50vh;
+}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
 }
