--- a/Store/Templates/Store/admin/customers/customers.html
+++ b/Store/Templates/Store/admin/customers/customers.html
@@ -1,4 +1,6 @@
 {% extends 'Store/layout.html' %}
+{% load staticfiles %}
+{% load widget_tweaks %}
 {% block nav %}
   {% if user_id is none %}
     <li>You are currently logged out</li>
@@ -6,13 +8,13 @@
     <li><b>Greetings, {{username}}</li>
   {% endif %}
 {% endblock %} 
+{% block head %}
+<link href="{%  static "css/bookstyle.css" %}" type="text/css" rel="stylesheet">
+{% endblock %}
 {% block content %}
-<form method="POST" name='go-back'>
-    {% csrf_token %} 
-<button type="submit" class="modal-action waves-effect waves-green btn-flat" name="return">
-    <i class=" material-icons medium">keyboard_return</i>
-    Return to Admin Management Page</button>
-</form>
+<h6>
+<a href='{% url 'adminindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Admin Management</a>
+</h6>
 <h4>Customers</h4>
 <table>
     <thead>
@@ -36,4 +38,7 @@
     {% endfor %}
     </tbody>
 </table>
+<script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
+<script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
+<script type="text/javascript" src="{% static "js/books.js" %}"></script> 
 {% endblock %}
