--- a/Store/Templates/Store/admin/customers/details.html
+++ b/Store/Templates/Store/admin/customers/details.html
@@ -1,22 +1,43 @@
 {% extends 'Store/layout.html' %}
+{% load staticfiles %}
+{% load widget_tweaks %}
+{% block nav %}
+  {% if user_id is none %}
+    <li>You are currently logged out</li>
+  {% else %}
+    <li><b>Greetings, {{username}}</li>
+  {% endif %}
+{% endblock %} 
+{% block head %}
+<link href="{%  static "css/bookstyle.css" %}" type="text/css" rel="stylesheet">
+{% endblock %}
 {% block content %}
 <h3>{{customer.user.first_name}} {{customer.user.last_name}}</h3>
 <div class="row">
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-content">
-              <span class="card-title">General Customer Information</span>
-              <p>
-                  CustomerID: {{customer.customer_id}} <br>
-                  Username: {{customer.user.username}} <br>
-                  E-mail: {{customer.user.email}} <br>
-                  Last Login: {{customer.user.last_login}} <br>
-                  Is Active:{% if customer.user.is_active == 1 %} Active {% else %} Inactive{% endif %}
-            </p>
-            </div>
-            <div class="card-action">
-                <a href="#">{% if customer.user.is_active == 1 %} Deactivate{% else %} Activate{% endif %}</a>
-              </div>
-          </div>
+    <div class="col s12 m6">
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">General Customer Information</span>
+          <p>
+              CustomerID: {{customer.customer_id}} <br>
+              Username: {{customer.user.username}} <br>
+              E-mail: {{customer.user.email}} <br>
+              Last Login: {{customer.user.last_login}} <br>
+              {% if customer.user.is_active == 1 %} Active {% else %} Inactive {% endif %}
+        </p>
         </div>
+      </div>
+    </div>
+<div class="row">
+    <div class="col s12 m6">
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">Customer Orders </span>
+
+        </div>
+      </div>
+    </div>
+<script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
+<script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
+<script type="text/javascript" src="{% static "js/books.js" %}"></script> 
 {% endblock %}
