--- a/Store/Templates/Store/admin/genres/details.html
+++ b/Store/Templates/Store/admin/genres/details.html
@@ -20,17 +20,44 @@
     <a class='modal-trigger' href='#updategenre'><i class="material-icons">edit</i></a>
     <a class='modal-trigger' href='#deletegenre'><i class="material-icons">delete</i></a>
 </h4> 
-<table>
-{% for book in books %}
-<tr>
-    <td>{{book.title}}</td>
-</tr>
-{% endfor %}
-</table>
+<div class="row">
+        <div class="col s12 m5">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title"><b>Books in Genre</b></span>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Book Title</th>
+                                <th> Copies Sold</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        {% for b in books %}
+                        <tr>
+                            <td> {{b.title}} </td>
+                            <td> Copies Sold</td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>         
+                </div>       
+            </div>
+        </div>
+    <div class="col s12 m5">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title"><b>TBD</b></span>
+                    
+                    
+                </div>       
+            </div>
+        </div>
+    </div>
 <div id="updategenre" class="modal">
         <form method="POST" class="col s12">
             {% csrf_token %}
-            {{ author_form.non_field_errors }}            
+            {{ egenre.non_field_errors }}            
             <div class="modal-content">
                 <h4>Update Genre</h4>
                 <div class="row">
@@ -50,9 +77,8 @@
         </form>
     </div>
     <div id="deletegenre" class="modal">
-            <form method="POST" class="col s12">
-                {% csrf_token %}
-                {{ author_form.non_field_errors }}            
+            <form method="POST" class="col s12"> 
+                    {% csrf_token %}          
                 <div class="modal-content">
                     <h4>Delete {{genre.genre}} </h4>
                     <div class="row">
