--- a/Store/Templates/Store/admin/publishers/details.html
+++ b/Store/Templates/Store/admin/publishers/details.html
@@ -13,14 +13,18 @@
 {% endblock %} 
 
 {% block content %}
-
+<h6>
+    <a href='{% url 'adminpublisherindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Publishers</a>
+</h6>
 <h3>{{publisher.company_name}} </h3>
 <div class="row">
 <div class="col s12 m5">
     <div class="card">
         <div class="card-content">
             <span class="card-title"><b>Publisher Information</b> 
-                <a class="modal-trigger " href="#updatepublisher"><i class=" material-icons">edit</i></a></span>
+                <a class="modal-trigger " href="#updatepublisher"><i class=" material-icons">edit</i></a>
+                <a class="modal-trigger " href="#deletepublisher"><i class=" material-icons">delete</i></a>
+            </span>
             <ul>
                 <li><b>Company Name:</b>{{publisher.company_name}}</li>
                 <li><b>City/State:</b>  {{publisher.city}}, {{publisher.state_code}} {{publisher.zip_code}}</li>
@@ -124,6 +128,21 @@
             </div>
         </form>
     </div>
+    <div id="deletepublisher" class="modal">
+            <form method="POST" class="col s12">     
+                    {% csrf_token %}        
+                <div class="modal-content">
+                    <h4>Delete {{publisher.publisher}} </h4>
+                    <div class="row">
+                      <h6>Make sure that there are no books which use this publisher before deleting.</h6>         
+                    </div>
+                </div>        
+                <div class="modal-footer">             
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+                    <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="delete-publisher">Delete</button>
+                </div>
+            </form>
+        </div>
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/books.js" %}"></script>
