--- a/Store/Templates/Store/customer/ccard.html
+++ b/Store/Templates/Store/customer/ccard.html
@@ -10,9 +10,7 @@
 {% endblock %} 
 {% block content %}
 <h6>
-<form method="POST" name='go-back'>
 <a href="{% url 'customeraccount' %}"> Return to Account Overview</a>
-</form>
 </h6>
 <div class="row">
     <div class="col s12 m6">
@@ -46,68 +44,43 @@
         </div>
         </div>
     </div>
-    <div id="updateAddress" class="modal">
-      <form method="POST" class="col s12" >
-      {% csrf_token %} 
-      {{ eaddress.non_field_errors }}
-      <div class="modal-content">
-        <div class="row">
-          <div class="col s12" >
-          <h3> Update Address:</h3>
-          <div class="input-field col s6">
-              <h5> Add New </h5>
-                {{ eaddress.street.errors }}
-                <label for="{{ eaddress.street.id_for_label }}">Street</label>
-                {{ eaddress.street }}
-            </div>
-            <div class="input-field col s6">
-                {{ eaddress.city.errors }}
-                <label for="{{ eaddress.city.id_for_label }}">City</label>
-                {{ eaddress.city }}
-            </div>
-            <div class="input-field col s6">
-                {{ eaddress.state_code.errors }}                        
-                {{ eaddress.state_code }}
-                <label>State</label>       
-            </div>
-            <div class="input-field col s6">
-                {{ eaddress.zip_code.errors }}
-                <label for="{{ eaddress.zip_code.id_for_label }}">Zip Code</label>
-                {{ eaddress.zip_code }}       
-            </div>
+<div id="updateAddress" class="modal">
+<form method="POST" class="col s12" >
+{% csrf_token %} 
+{{ eaddress.non_field_errors }}
+<div class="modal-content">
+        <h3> Update Address:</h3>
+    <div class="row">
+            <div class="col s12" >
+                <div class="input-field col s6">
+                    {{ eaddress.street.errors }}
+                    <label for="{{ eaddress.street.id_for_label }}">Street</label>
+                    {{ eaddress.street }}
+                </div>
+                <div class="input-field col s6">
+                    {{ eaddress.city.errors }}
+                    <label for="{{ eaddress.city.id_for_label }}">City</label>
+                    {{ eaddress.city }}
+                </div>
+                <div class="input-field col s6">
+                    {{ eaddress.state_code.errors }}                        
+                    {{ eaddress.state_code }}
+                    <label>State</label>       
+                </div>
+                <div class="input-field col s6">
+                    {{ eaddress.zip_code.errors }}
+                    <label for="{{ eaddress.zip_code.id_for_label }}">Zip Code</label>
+                    {{ eaddress.zip_code }}       
+                </div>
         </div>
-        <div class="col s12">
-          <h5> Choose from Existing:</h5>
-          <div class="input-field col s6">
-            <h5> Add New </h5>
-              {{ eaddress.street.errors }}
-              <label for="{{ eaddress.street.id_for_label }}">Street</label>
-              {{ eaddress.street }}
-          </div>
-          <div class="input-field col s6">
-              {{ eaddress.city.errors }}
-              <label for="{{ eaddress.city.id_for_label }}">City</label>
-              {{ eaddress.city }}
-          </div>
-          <div class="input-field col s6">
-              {{ eaddress.state_code.errors }}                        
-              {{ eaddress.state_code }}
-              <label>State</label>       
-          </div>
-          <div class="input-field col s6">
-              {{ eaddress.zip_code.errors }}
-              <label for="{{ eaddress.zip_code.id_for_label }}">Zip Code</label>
-              {{ eaddress.zip_code }}       
-          </div>
-        </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-          <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="edit-address">Update</button>
-      </div>
-      </form>
-  </div> 
+    </div>
+<div class="modal-footer">
+    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+    <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="update-address">Update</button>
+</div>
+</form>
+</div>
+
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/books.js" %}"></script> 
