--- a/Store/Templates/Store/customer/shippay.html
+++ b/Store/Templates/Store/customer/shippay.html
@@ -95,10 +95,12 @@
                 </div>
             </div>
         </div>
-        <div class="fixed-action-btn">
-            <button class="btn-floating btn-large modal-trigger tooltipped" data-position="left" data-tooltip="Review order" type="submit" name="review-order">
-                <i class="large material-icons">arrow_forward</i>
-            </button>
+        <div class="row">
+            <div class="col s2 offset-s10 right-align">
+                <button class="orange btn" type="submit" name="review-order">
+                    Review Order
+                </button>
+            </div>
         </div>
     </form>
 </div>
