--- a/Store/Templates/Store/customer/books/details.html
+++ b/Store/Templates/Store/customer/books/details.html
@@ -2,9 +2,6 @@
 {% load staticfiles %} 
 {% load widget_tweaks %} 
 
-{% block head %}
-{% endblock %}
-
 {% block content %}
 <div class="section"></div>
 <div class="row">
@@ -31,40 +28,29 @@
                         {{ book.genre.genre }}<br>                    
                     </p>
                 </div>
-                <div class="row">
-                    <h5 class="col s10">
-                        ${{ inventory.retail_price }}
-                    </h5>
-                    <div class="col s2">                    
-                        <a class="btn-floating btn-large modal-trigger" href="#addtocart">
-                            <i class="large material-icons">add_shopping_cart</i>
-                        </a>               
-                    </div> 
-                </div>                                                   
+                <div class="divider"></div>
+                <div class="row section">
+                    <form method="POST" class="col s12">
+                        {% csrf_token %}
+                        {{ cart_form.non_field_errors }}                    
+                        <h5 class="col s7">
+                            ${{ book.inventory.retail_price }}
+                        </h5>
+                        <div class="input-field col s3">
+                            {{ cart_form.quantity_ordered.errors }}
+                            <label for="{{ cart_form.quantity_ordered.id_for_label }}">Quantity</label> 
+                            {{ cart_form.quantity_ordered }}     
+                        </div>                                                    
+                        <div class="col s2">                    
+                            <button type="submit" class="btn-floating btn-large" name="add-cart">
+                                <i class="large material-icons">add_shopping_cart</i>
+                            </button>               
+                        </div>                     
+                    </form>                                                    
+                </div>
             </div>            
         </div>
     </div>
-</div>
-
-<div id="addtocart" class="modal">
-    <form method="POST" class="col s12">
-        {% csrf_token %}
-        {{ cart_form.non_field_errors }}            
-        <div class="modal-content">
-            <h4>Add "{{ book.title }}" to cart</h4>
-            <div class="row">
-                <div class="input-field col s4 offset-s4">
-                    {{ cart_form.quantity_ordered.errors }}
-                    <label for="{{ cart_form.quantity_ordered.id_for_label }}">Quantity</label> 
-                    {{ cart_form.quantity_ordered }}     
-                </div>
-            </div>
-        </div>        
-        <div class="modal-footer">            
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-            <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="add-cart">Submit</button>
-        </div>
-    </form>
 </div>
 
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
