--- a/Store/Templates/Store/customer/cart.html
+++ b/Store/Templates/Store/customer/cart.html
@@ -1,6 +1,11 @@
 {% extends 'Store/layout.html' %} 
 {% load staticfiles %} 
-{% load widget_tweaks %} 
+{% load widget_tweaks %}
+{% load store_extras %}
+
+{% block head %}
+<link href="{% static "css/bookstyle.css" %}" type="text/css" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 <div class="section"></div>
@@ -9,41 +14,58 @@
         <div class="card">
             <div class="card-content">
                 <span class="card-title">
-                    Shopping Cart
+                    <i class="material-icons">shopping_cart</i> Shopping Cart
                 </span>
                 <table> 
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                        </tr>
-                    </thead>    
                     <tbody>
                         {% if cart_items %}
                         {% for item in cart_items %}
                         <tr>
-                            <td><a href="{% url 'customer_book' book_id=item.book.book_id %}">{{ item.book.title }}</a></td>
-                            <td>${{ item.book.inventory.retail_price }}</td>
-                            <td><i class="material-icons">delete</i></td>
+                            <td>
+                                <a href="{% url 'customer_book' book_id=item.book.book_id %}">{{ item.book.title }}</a>
+                                {% if item.quantity_ordered > 1 %}
+                                 ({{ item.quantity_ordered }})
+                                {% endif %}
+                            </td>                            
+                            <td class="grey-text">${{ item.book.inventory.retail_price }}</td>                            
+                            <td>${% multiply item.quantity_ordered item.book.inventory.retail_price %}</td>
+                            <td>
+                                <form method="POST">
+                                    {% csrf_token %}
+                                    <button type="submit" id="submit-link" onclick="return confirm('Are you sure you want to delete this from your cart?')">
+                                        <i class="material-icons">delete</i></button>
+                                    <input type="hidden" value="{{ item.book.book_id }}" name="delete-book"/>
+                                </form>                            
+                            </td>                    
                         </tr>                                                                                                                                     
                         {% endfor %}
+                        <tr>
+                            <td></td>                                                
+                            <td>Subtotal:</td>
+                            <td><h6>${{ cart_total }}</h6></td>
+                            <td></td>
+                        </tr>
                         {% else %}
-                            <h5>No books are in your cart</h5>
+                        <div class="section">
+                            <h6>It's lonely here</h6>
+                            <br>
+                            <a href="{% url 'customer_books'%}">Go shopping bro!</a>
+                        </div>                        
                         {% endif %}
                     </tbody>                                   
                 </table>
             </div>
         </div>
     </div>
-    <div class="col s6">
-        <div class="row">
-            <h5>Thank you for shopping with us!</h5>
-            <h6>Cart total: ${{ cart_total }}</h6>
+    <div class="col s6 section valign-wrapper" style="display: block; height: 100%;">
+        {% if cart_items %}
+        <div class="row center-align">
+            <h5>Thank you for shopping with us!</h5>            
         </div>
-        <div class="row">        
-            <a class="btn" href="{% url 'ship_pay' %}">Check out</a>
+        <div class="row center-align">        
+            <a class="orange btn" href="{% url 'ship_pay' %}">Check out</a> or <a href="{% url 'customer_books'%}">Continue shopping</a>
         </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
